--- a/eclipse/Edunova04/.project
+++ b/eclipse/Edunova04/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EdunovaE04</name>
+	<name>Edunova04</name>
 	<comment></comment>
 	<projects>
 	</projects>
