--- a/netBeans/EdunovaAPP/pom.xml
+++ b/netBeans/EdunovaAPP/pom.xml
@@ -50,9 +50,12 @@
             <version>0.3.7</version>
         </dependency>
 
-
-
-
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
 
 
     </dependencies>
