--- a/netBeans/FinalApp/pom.xml
+++ b/netBeans/FinalApp/pom.xml
@@ -55,6 +55,15 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        
+        
+        <!-- https://mvnrepository.com/artifact/com.slack.api/slack-api-client -->
+        <dependency>
+            <groupId>com.slack.api</groupId>
+            <artifactId>slack-api-client</artifactId>
+            <version>1.31.0</version>
+        </dependency>
+
       </dependencies>
 
 </project>
