--- a/netBeans/EdunovaApp/pom.xml
+++ b/netBeans/EdunovaApp/pom.xml
@@ -58,6 +58,11 @@
             <version>2.10.1</version>
         </dependency>
 
+         <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>2.11</version>
+        </dependency>
 
 
 
