--- a/netBeans/FinalApp/pom.xml
+++ b/netBeans/FinalApp/pom.xml
@@ -57,6 +57,14 @@
         </dependency>
         
         
+        
+         <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>2.11</version>
+        </dependency>
+        
+        
         <!-- https://mvnrepository.com/artifact/com.slack.api/slack-api-client -->
         <dependency>
             <groupId>com.slack.api</groupId>
