--- a/netBeans/EdunovaApp/pom.xml
+++ b/netBeans/EdunovaApp/pom.xml
@@ -63,6 +63,13 @@
             <artifactId>argon2-jvm</artifactId>
             <version>2.11</version>
         </dependency>
+        
+        <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.13</version>
+        </dependency>
+
 
 
 
