--- a/netBeans/EdunovaApp/pom.xml
+++ b/netBeans/EdunovaApp/pom.xml
@@ -69,6 +69,13 @@
         <artifactId>httpclient</artifactId>
         <version>4.5.13</version>
         </dependency>
+        
+         <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
+        </dependency>
 
 
 
