--- a/netBeans/FinalApp/pom.xml
+++ b/netBeans/FinalApp/pom.xml
@@ -55,23 +55,24 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-        
-        
-        
+     
          <dependency>
             <groupId>de.mkammerer</groupId>
             <artifactId>argon2-jvm</artifactId>
             <version>2.11</version>
         </dependency>
         
-        
-        <!-- https://mvnrepository.com/artifact/com.slack.api/slack-api-client -->
+         <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
         <dependency>
-            <groupId>com.slack.api</groupId>
-            <artifactId>slack-api-client</artifactId>
-            <version>1.31.0</version>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
         </dependency>
-
-      </dependencies>
+        <dependency>
+            <groupId>hr.edunova</groupId>
+            <artifactId>EdunovaApp</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
