--- a/netBeans/AutokucaApp/pom.xml
+++ b/netBeans/AutokucaApp/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hr.autokuca</groupId>
-    <artifactId>FinalApp</artifactId>
+    <artifactId>AutokucaApp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -27,12 +27,7 @@
         </dependency>
         
         
-        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
-        <dependency>
-            <groupId>com.github.javafaker</groupId>
-            <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
-        </dependency>
+        
         
         
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
@@ -73,6 +68,13 @@
             <artifactId>EdunovaApp</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+        <groupId>net.datafaker</groupId>
+        <artifactId>datafaker</artifactId>
+        <version>2.0.1</version>
+        </dependency>
+        
     </dependencies>
-
+    <name>AutokucaApp</name>
 </project>
