--- a/netBeans/EdunovaApp/pom.xml
+++ b/netBeans/EdunovaApp/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>commons-validator</artifactId>
             <version>1.7</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.github.lgooddatepicker/LGoodDatePicker -->
+        <dependency>
+            <groupId>com.github.lgooddatepicker</groupId>
+            <artifactId>LGoodDatePicker</artifactId>
+            <version>11.2.1</version>
+        </dependency>
 
 
 
