--- a/netBeans/AutokucaApp/pom.xml
+++ b/netBeans/AutokucaApp/pom.xml
@@ -63,17 +63,27 @@
             <artifactId>commons-validator</artifactId>
             <version>1.7</version>
         </dependency>
-        <dependency>
-            <groupId>hr.edunova</groupId>
-            <artifactId>EdunovaApp</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+       
         
         <dependency>
         <groupId>net.datafaker</groupId>
         <artifactId>datafaker</artifactId>
         <version>2.0.1</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.20.6</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.3</version>
+        </dependency>
+
         
     </dependencies>
     <name>AutokucaApp</name>
