--- a/SpringBoot/03. field-validation/global-superstore/starter/global-superstore/pom.xml
+++ b/SpringBoot/03. field-validation/global-superstore/starter/global-superstore/pom.xml
@@ -38,7 +38,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+    	</dependency>
 	</dependencies>
+
+	 
+
 
 	<build>
 		<plugins>
