--- a/SpringBoot/03. field-validation/workbook 3.2/solution/javagram/pom.xml
+++ b/SpringBoot/03. field-validation/workbook 3.2/solution/javagram/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
+	<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.2.0</version>
+		<type>pom</type>
 	</parent>
 	<groupId>com.ltp</groupId>
 	<artifactId>javagram</artifactId>
