--- a/SpringBoot/09. sql-database/spring-jpa/starter/grade-submission/pom.xml
+++ b/SpringBoot/09. sql-database/spring-jpa/starter/grade-submission/pom.xml
@@ -54,7 +54,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-	</dependency>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
