--- a/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
+++ b/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ltp</groupId>
@@ -48,9 +48,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version> <!-- ili odgovarajuća verzija -->
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+	
+		
+
+
+		
 		
 	</dependencies>
 
