--- a/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
+++ b/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
@@ -51,19 +51,24 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
+			 <scope>runtime</scope>
+			<version>8.0.32</version>
 		</dependency>
 
+		 <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+    	</dependency>
 
+
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 	
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-		</dependency>
+		
 
 
 
