--- a/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
+++ b/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
@@ -48,12 +48,14 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+		
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			 <scope>runtime</scope>
-			<version>8.0.32</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.32</version> <!-- ili najnovija verzija -->
 		</dependency>
+		
+
 
 		
 		
