--- a/SpringBoot/Excercise1/excercise1/pom.xml
+++ b/SpringBoot/Excercise1/excercise1/pom.xml
@@ -29,8 +29,9 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<version>8.3.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
