--- a/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/src/main/resources/application.properties
+++ b/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
