--- a/netBeans/FishingStore1/pom.xml
+++ b/netBeans/FishingStore1/pom.xml
@@ -11,4 +11,26 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>fishingstore.FishingStore1</exec.mainClass>
     </properties>
+    
+    
+     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.7.Final</version>
+        </dependency>
+        
+        
+        
+     </dependencies>
+    
+    
 </project>
