--- a/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
+++ b/SpringBoot/10. spring-security/workbook 10.1/starter/grade-submission/pom.xml
@@ -20,6 +20,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -57,6 +63,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+		</dependency>
 		
 		
 	</dependencies>
