--- a/SpringBoot/WebShop/pom.xml
+++ b/SpringBoot/WebShop/pom.xml
@@ -64,6 +64,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.26</version> 
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
