--- a/SpringBoot/WebShop/src/main/resources/application.properties
+++ b/SpringBoot/WebShop/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=WebShop
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=user
+spring.datasource.password=password
+
+
+
