--- a/SpringBoot/WebShop/pom.xml
+++ b/SpringBoot/WebShop/pom.xml
@@ -64,12 +64,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.26</version> 
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.4.0</version>
 		</dependency>
-
 
 	</dependencies>
 
