--- a/SpringBoot/WebShop/pom.xml
+++ b/SpringBoot/WebShop/pom.xml
@@ -71,6 +71,11 @@
 			<version>8.4.0</version>
 		</dependency>
 
+		 <dependency>
+        	<groupId>org.liquibase</groupId>
+        	<artifactId>liquibase-core</artifactId>
+   	 	</dependency>
+
 	</dependencies>
 
 	<build>
