--- a/SpringBoot/WebShop/src/main/resources/application.properties
+++ b/SpringBoot/WebShop/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/webshop
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 
 
