--- a/SpringBoot/webshop_swagger/webshop_swagger/src/main/resources/application.properties
+++ b/SpringBoot/webshop_swagger/webshop_swagger/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=webshop_swagger
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.path=/
