--- a/SpringBoot/webshop_swagger/webshop_swagger/pom.xml
+++ b/SpringBoot/webshop_swagger/webshop_swagger/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>webshop_swagger</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>webshop_swagger</name>
-	<description>Demo project for Spring Boot</description>
+	<description>First try</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -23,10 +23,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+                    <groupId>org.springdoc</groupId>
+                    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                    <version>2.0.3</version>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
