--- a/SpringBoot/webshop_swagger/webshop_swagger/pom.xml
+++ b/SpringBoot/webshop_swagger/webshop_swagger/pom.xml
@@ -21,11 +21,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
                     <groupId>org.springdoc</groupId>
                     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-                    <version>2.0.3</version>
+					<version>2.1.0</version>
         </dependency>
 	</dependencies>
 
