--- a/SpringBoot/WebShop/pom.xml
+++ b/SpringBoot/WebShop/pom.xml
@@ -64,18 +64,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<version>8.4.0</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.29</version>
 		</dependency>
 
-		 <dependency>
-        	<groupId>org.liquibase</groupId>
-        	<artifactId>liquibase-core</artifactId>
-   	 	</dependency>
 
+	
 	</dependencies>
 
 	<build>
